--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <resources>
-
     <string name="title">Title</string>
     <string name="app_name">Drupoid</string>
     <string name="upload_button">Upload image</string>
@@ -9,5 +8,12 @@
     <string name="image_preview">Image preview</string>
     <string name="uploading">Uploading</string>
     <string name="please_wait">Please wait …</string>
-
+    <string name="settings">Settings</string>
+    <string name="drupoid_url">http://example.com/drupoid</string>
+    <string name="drupoid_username">Username</string>
+    <string name="drupoid_password">Password</string>
+    <string name="preferences">Connection settings to your Drupal website.</string>
+    <string name="save_preferences">Save settings</string>
+    <string name="missing_prefs">Please enter all settings.</string>
+    <string name="saved_prefs">The configuration has been saved.</string>
 </resources>
