Use multipart to upload images, this enables us to upload the full image!

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="saved_prefs">The configuration has been saved.</string>
     <string name="no_connection">You have no network connection. You will not be able to upload images.</string>
     <string name="close">Close</string>
+    <string name="error_upload">There was an error with the upload, try again later.</string>
 </resources>
