--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -3,19 +3,21 @@
     <string name="title">Title</string>
     <string name="app_name">Drupoid</string>
     <string name="upload_button">Upload image</string>
-    <string name="missing_data">Please enter a title and select an image</string>
+    <string name="missing_data">Please enter a title and select an image.</string>
     <string name="picture_select">Select picture</string>
     <string name="image_preview">Image preview</string>
     <string name="uploading">Uploading</string>
     <string name="please_wait">Please wait …</string>
-    <string name="settings">Settings</string>
+    <string name="sign_in">Sign in with your account:</string>
     <string name="drupoid_url">http://example.com/drupoid</string>
     <string name="drupoid_username">Username</string>
     <string name="drupoid_password">Password</string>
-    <string name="preferences">Connection settings to your Drupal website.</string>
-    <string name="save_preferences">Save settings</string>
-    <string name="missing_prefs">Please enter all settings.</string>
-    <string name="no_connection">You have no network connection. You will not be able to upload images.</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
+    <string name="authenticating">Authenticating …</string>
+    <string name="logging_out">logging out …</string>
+    <string name="missing_cred">Please enter all credentials.</string>
+    <string name="no_connection">No internet connection.</string>
     <string name="close">Close</string>
     <string name="error_upload">There was an error with the upload, try again later.</string>
 </resources>
