--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="login">Login</string>
     <string name="logout">Logout</string>
     <string name="authenticating">Authenticating …</string>
-    <string name="logging_out">logging out …</string>
+    <string name="logging_out">Logging out …</string>
     <string name="missing_cred">Please enter all credentials.</string>
     <string name="no_connection">No internet connection.</string>
     <string name="close">Close</string>
