--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="parse_server_error">Could not parse the server response. Maybe you are using the wrong endpoint, or the endpoint is down ?</string>
     <string name="title">Title</string>
     <string name="app_name">Drupoid</string>
-    <string name="upload_button">Upload image</string>
+    <string name="upload_button">Send</string>
     <string name="missing_data">Please enter a title and select an image.</string>
     <string name="picture_select">Select picture</string>
     <string name="image_preview">Image preview</string>
