--- a/README
+++ b/README
@@ -34,6 +34,6 @@ After compiling, run the application and configure
 the url, username and password. The path in the url
 matches the Drupal path, eg http://example.com/mobile-post
 
-iPhone
-------
+iOS
+---
 To come
