--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="app_name">Drupoid</string>
     <string name="upload_button">Send</string>
     <string name="missing_data">Please enter a title and select an image.</string>
-    <string name="picture_select">Select picture</string>
     <string name="image_preview">Image preview</string>
+    <string name="picture_select">Choose picture</string>
     <string name="uploading">Uploading</string>
     <string name="error_upload">There was an error with the upload, try again later.</string>
     <string name="please_wait">Please wait …</string>
