--- a/DruGlass/DruGlass/src/main/res/values/strings.xml
+++ b/DruGlass/DruGlass/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">DruGlass</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="voice_trigger">druglass</string>
+    <string name="voice_trigger">drupalglass</string>
 
     <!-- Menu item strings. -->
     <string name="stop">Done</string>
