--- a/DruGlass/DruGlass/src/main/res/values/strings.xml
+++ b/DruGlass/DruGlass/src/main/res/values/strings.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">DruGlass</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="voice_trigger">drupalglass</string>
+    <!-- Global strings -->
+    <string name="app_name">Drupal Glass</string>
+    <string name="voice_trigger">Drupal Glass</string>
 
     <!-- Menu item strings. -->
-    <string name="stop">Done</string>
-    <string name="share">Share to site</string>
+    <string name="stop">Stop</string>
+    <string name="share">Send to site</string>
     <string name="tapforoptions">Tap for options</string>
 
 </resources>
