Cleanup of xml and logging.

--- a/DruGlass/DruGlass/src/main/res/values/strings.xml
+++ b/DruGlass/DruGlass/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- Global strings -->
     <string name="app_name">Drupal Glass</string>
     <string name="voice_trigger">Drupal Glass</string>
+    <string name="photo">Photo</string>
 
     <!-- Menu item strings. -->
     <string name="stop">Stop</string>
